--- a/templates/submit-print.html
+++ b/templates/submit-print.html
@@ -10,7 +10,7 @@
         <div class="col-sm-6">
             <div class="card mb-4">
                 <div class="card-body all-prints-cards">
-                    <h2>Submit your print:<h2></h2>
+                    <h2>Submit your print:</h2>
                     <hr />
                     <p>just click the button</p>
                     <form method="POST" style="margin-top: 1.3em;" enctype="multipart/form-data">
