--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,20 @@
         <hr class="vanish-mobile">
     </header>
 
+    <!-- MESSAGES: Used from "I think therefore I blog" -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
     <body>
         {% block content %}
         {% endblock %}
@@ -157,6 +171,14 @@
     <script src="https://kit.fontawesome.com/7daaaf94bb.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
+    <!-- Taken from "I think therefore I blog" -->
+    <script>
+        setTimeout(function() {
+            let messages = document.getElementById("msg");
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 3000);
+    </script>
 </body>
 
 </html>
