--- a/templates/prints.html
+++ b/templates/prints.html
@@ -25,7 +25,7 @@
     <div class="row print-display">
         <!-- APPROVED PRINT SUBMISSIONS -->
         {% for print in artprint_list %}
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-md-6 col-lg-3">
             <div class="card mb-4">
                 <div class="card-body all-prints-cards">
                     <div class="image-container">
